--- a/android/build.gradle
+++ b/android/build.gradle
@@ -27,7 +27,7 @@ android {
     compileSdkVersion 28
 
     defaultConfig {
-        minSdkVersion safeExtGet('reactNativeFFmpegPackage', 'https').contains("-lts") ? 16 : 24
+        minSdkVersion 24
         targetSdkVersion 28
         versionCode 40
         versionName "0.4.0"
